--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 authors = ["Linus Leo Stöckli"]
 repository = "https://github.com/hacknus/egui_double_slider"
 description = "A double slider widget for egui."
-readme = "README.md"
+readme = "README.MD"
 keywords = ["egui", "slider", "double-slider", "widget"]
 categories = ["gui"]
 documentation = "https://docs.rs/egui_double_slider"
