--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "egui_double_slider"
-version = "0.7.3"
+version = "0.8.0"
 edition = "2021"
 authors = ["Linus Leo Stöckli"]
 repository = "https://github.com/hacknus/egui_double_slider"
@@ -17,3 +17,4 @@ egui = "0.31"
 
 [dev-dependencies]
 eframe = "0.31"
+egui-theme-switch = "0.3.0"
